antex-rs/tui/src/chatwidget/tests/snapshots/antex_tui__chatwidget__tests__questions_tests__freeform_question.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 39
expression: "render_bottom_popup(&chat, 80)"
---
• Queued follow-up inputs

  1 of 2

  Which way?

  Type your answer

  enter submit   ctrl + ] skip   ⌥ + ↓ main prompt   ⌥ + ↑ next question
