antex-rs/tui/src/chatwidget/tests/snapshots/antex_tui__chatwidget__tests__questions_tests__question_vim_single.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "format!(\"NORMAL\\n{normal}\\n\\nSEARCH\\n{search}\")"
---
NORMAL
• Queued follow-up inputs

  Which way?

  alpha beta
  alpha gamma

  enter submit   ctrl + ] skip   ⌥ + ↓ main prompt

SEARCH
• Queued follow-up inputs

  Which way?

  alpha beta
  alpha gamma
  /gamma

  enter submit   ctrl + ] skip   ⌥ + ↓ main prompt
