antex-rs/tui/src/chatwidget/tests/snapshots/antex_tui__chatwidget__tests__questions_tests__questions_cleared_by_follow_up.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 88
expression: "render_bottom_popup(&chat, 80).lines().next().unwrap()"
---
 ┃ Ask Antex to do anything
